--- a/classrooms.html
+++ b/classrooms.html
@@ -12,6 +12,8 @@
          integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
       <link rel="stylesheet" href="src/design/materialize.min.css">
       <link rel="stylesheet" href="src/design/custom.css">
+      <link rel="stylesheet" href="src/design/app.css">
+      
    </head>
    <body>
       <header>
@@ -194,7 +196,162 @@
             </div>
          </div>
 
-         <div id="test4" class="col s12 tabDivs">Friends</div>
+         <!-- friends -->
+         <div id="test4" class="tabDivs">
+               <div class="row">
+                   <div class="col s12 l2">
+                       <div class="card horizontal hoverable">
+                           <div class="card-content">
+                               <div class="row" id="teacher">
+                                   <div class="col s12 l12">
+                                       <h4>Teacher</h4>
+                                   </div>
+                                   <div class="col s12 l12">
+                                       <img src="src/lib/svg/zihad.jpeg" width="100px" height="100px" alt=""
+                                           class="circle responsive valign profile-image">
+                                   </div>
+                                   <div class="col s12 l12">
+                                       <h5>Md.Anwar Hossain</h5>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col l1">
+   
+                   </div>
+                   <div class="col s12 l5">
+                       <div class="row">
+                           <div class="col s12 l12">
+                               <div class="card horizontal hoverable" id="scard">
+                                   <div class="card-content" id="description">
+                                       <div class="col s12 l12">
+                                           <h4>Classmates</h4>
+                                       </div>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+   
+                       <div class="row">
+                           <div class="col s12 l12">
+                               <div class="card horizontal hoverable" is="scard">
+                                   <div class="card-content">
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>                                          
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Shunjid Rahman Showrov</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" padding-top="100px" width="30px"
+                                                   height="30px" alt="" class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Zubayer Himel</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Shah Fahad Hossain</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Anindo Shahriar</a>
+                                           </div>
+                                       </div>
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Shunjid Rahman Showrov</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" padding-top="100px" width="30px"
+                                                   height="30px" alt="" class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Zubayer Himel</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+   
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Shah Fahad Hossain</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Anindo Shahriar</a>
+                                           </div>
+                                       </div>
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Shunjid Rahman Showrov</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" padding-top="100px" width="30px"
+                                                   height="30px" alt="" class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Zubayer Himel</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+   
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Shah Fahad Hossain</a>
+                                           </div>
+                                       </div>
+   
+                                       <div class="col s12 l12">
+                                           <div class="row">
+                                               <div class="divider"></div>
+                                               <img src="src/lib/svg/zihad.jpeg" width="30px" height="30px" alt=""
+                                                   class="circle responsive valign profile-image">
+                                               <a class="" id="sname">Anindo Shahriar</a>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+
       </div>
       <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
       <script src="src/app/materialize.min.js"></script>
