--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
                      <!-- Dropdown Structure -->
                      <ul id='dropdown1' class='dropdown-content'>
-                        <li><a href="login.html"><i class="material-icons">eco</i>SignIn</a></li>
-                       <li><a href="registration.html"><i class="material-icons">view_module</i>SignUp</a></li>
-                       <li><a href="classrooms.html"><i class="material-icons">class</i>Classroom</a></li>
+                        <li><a class="grey-text text-darken-3" href="login.html"><i class="material-icons">eco</i>SignIn</a></li>
+                       <li><a class="grey-text text-darken-3" href="registration.html"><i class="material-icons">view_module</i>SignUp</a></li>
+                       <li><a class="grey-text text-darken-3" href="classrooms.html"><i class="material-icons">class</i>Classroom</a></li>
                      </ul>
                   </li>
                </ul>
@@ -54,8 +54,8 @@
       </div>
 
       <div id="contents" class="container">
-        <h2 class="center-align">To help expand learning for everyone</h2><br>
-        <div class="typewriter"><h6 class="center-align">Working to support education through our products, programs, and philanthropy.</h6></div>
+        <h2 class="center-align">To help expand learning for everyone</h2>
+        <h5 class="center-align">Working to support education through our products, programs, and philanthropy.</h5>
         
         <br>
         <p class="center-align">
