--- a/registration.html
+++ b/registration.html
@@ -2,26 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Registration</title>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Layout - eLuminous</title>
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Product+Sans:400&amp;lang=en" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500&amp;lang=en" rel="stylesheet">
     <link rel='stylesheet' href='https://unpkg.com/materialize-stepper@3.0.0-beta.1.0.1/dist/css/mstepper.min.css'>
-    <link rel="stylesheet" href="src/design/app.css">
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+    <link rel="stylesheet" href="src/design/materialize.min.css">
+    <link rel="stylesheet" href="src/design/home.css">
 </head>
 
 <body>
-    <nav class="nav-fixed">
-       <div class="nav-wrapper">
-        <a href="" class="brand-logo">eLuminous</a>
-       </div> 
-    </nav>
+    <header>
+        <nav class="nav-extended nav-fixed materialize-indigo">
+           <div class="nav-wrapper">
+              <a class="brand-logo" id="page-logo">
+              <i class="material-icons" id="page-logo-icon">brightness_7</i> &nbsp; eLuminous
+              </a>
+              <a href="#" class="sidenav-trigger" data-target="mobile-nav">
+              <i class="material-icons">menu</i>
+              </a>
+              <ul id="nav-mobile" class="right hide-on-med-and-down">
+                   <!-- Dropdown Trigger -->
+                 <li>
+                    <a class='dropdown-trigger' href='#' data-target='dropdown1'><i class="material-icons">more_vert</i></a>
+
+                    <!-- Dropdown Structure -->
+                    <ul id='dropdown1' class='dropdown-content'>
+                       <li><a class="grey-text text-darken-3" href="login.html"><i class="material-icons">eco</i>SignIn</a></li>
+                      <li><a class="grey-text text-darken-3" href="registration.html"><i class="material-icons">view_module</i>SignUp</a></li>
+                      <li><a class="grey-text text-darken-3" href="classrooms.html"><i class="material-icons">class</i>Classroom</a></li>
+                    </ul>
+                 </li>
+              </ul>
+           </div>
+        </nav>
+        <ul class="sidenav yellow-text text-darken-3" id="mobile-nav">
+           <li>
+              <a target="_blank" class="title" href="https://github.com/e-Luminous/ui">
+              <i class="fab fa-github"></i> GitHub
+              </a>
+           </li>
+        </ul>
+     </header>
    
     <div class="section grey lighten-5" id="reg">
         <div class="container">
             <div class="row">
-                <div class="col xl4 l6 m10 s12 offset-xl4 offset-l3 offset-m1">
-                    <h3 class="light center-align blue-text">Sign up form</h3>
+                <div class="col l6 s12  offset-l3 offset-m1">
+                    <h2 class="center-align blue-text">Sign up</h2>
                     <div class="card">
                         <div class="card-content">
 
@@ -36,9 +69,7 @@
                                             </div>
                                         </div>
                                         <div class="step-actions">
-                                            <button class="waves-effect waves-dark btn blue next-step"
-                                                data-feedback="anyThing">Continue</button>
-                                                <button class="waves-effect waves-dark btn-flat previous-step">Login your account</button>
+                                            <button class="waves-effect waves-dark btn blue next-step" data-feedback="anyThing">Continue</button>
                                         </div>
                                     </div>
                                 </li>
@@ -65,16 +96,17 @@
                                             <div class="input-field col s12">
                                                 <p>
                                                     <label>
-                                                        <input class="with-gap" name="role" type="radio" />
-                                                        <span>student</span>
+                                                        <input name="group1" type="radio" checked />
+                                                        <span>Student</span>
                                                     </label>
                                                 </p>
                                                 <p>
                                                     <label>
-                                                        <input class="with-gap" name="role" type="radio" />
-                                                        <span>teacher</span>
+                                                        <input name="group1" type="radio" />
+                                                        <span>Teacher</span>
                                                     </label>
                                                 </p>
+                                                <p>
                                             </div>
                                         </div>
                                         <div class="step-actions">
@@ -84,8 +116,6 @@
                                         </div>
                                     </div>
                                 </li>
-
-
 
                                 <li class="step">
                                     <div class="step-title waves-effect waves-dark">Password</div>
@@ -108,8 +138,8 @@
                                     <div class="step-content">
 
                                         <div class="step-actions">
-                                            <button class="waves-effect waves-dark btn blue next-step"
-                                                data-feedback="noThing">Submit</button>
+                                            <a href="classrooms.html" class="waves-effect waves-dark btn blue next-step"
+                                                data-feedback="noThing">Submit</a>
                                         </div>
                                     </div>
                                 </li>
@@ -122,11 +152,10 @@
         </div>
     </div>
     <!-- partial -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script>
     <script src='https://unpkg.com/materialize-stepper@3.0.0-beta.1.0.1/dist/js/mstepper.min.js'></script>
     <script src="src/app/app.js"></script>
     <script src="src/app/stepper.js"></script>
-
 </body>
-
 </html>
