--- a/classrooms.html
+++ b/classrooms.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Product+Sans:400&amp;lang=en" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500&amp;lang=en" rel="stylesheet">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     <link rel="stylesheet" href="src/design/materialize.min.css">
     <link rel="stylesheet" href="src/design/custom.css">
@@ -25,9 +27,9 @@
                     <i class="material-icons">menu</i>
                 </a>
                 <ul class="tabs tabs-transparent">
-                    <li class="tab"><a href="#test1">Posts</a></li>
-                    <li class="tab"><a class="active" href="#test2">Lab-Works</a></li>
-                    <li class="tab"><a href="#test4">Friends</a></li>
+                    <li class="tab"><a class="active" href="#test1">Notices</a></li>
+                    <li class="tab"><a  href="#test2">Lab-Works</a></li>
+                    <li class="tab"><a  href="#test4">People</a></li>
                 </ul>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li>
@@ -48,7 +50,26 @@
         <div class="indeterminate blue"></div>
     </div>
     <div id="contents">
-        <div id="test1" class="col s12 tabDivs">Posts</div>
+        <div id="test1" class="col s12 tabDivs">
+            <div class="row">
+                <div class="col l6 s12 offset-l3 offset-m1">
+                        <ul class="collapsible">
+                            <li class="active">
+                                <div class="collapsible-header"><i class="material-icons">filter_drama</i>Bring Geometry Box Tomorrow</div>
+                                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div>
+                            </li>
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+                                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div>
+                            </li>
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                            </li>
+                        </ul>
+                </div>
+            </div>    
+        </div>
         <div id="test2" class="tabDivs">
             <div class="row">
                 <div class="col s12 l12">
@@ -209,13 +230,32 @@
             </div>
         </div>
 
-        <div id="test4" class="col s12 tabDivs">Friends</div>
+        <div id="test4" class="col s12 tabDivs">
+            <div class="row">
+                <div class="col l6 s12 offset-l3 offset-m1">
+                    <h4 class="blue-text text-darken-2">Teacher</h4>
+                    <hr>
+                    <p> 
+                        <div class="chip">
+                            <img src="https://materializecss.com/images/yuna.jpg" alt="Contact Person">
+                            Prof.
+                        </div> Joshim Bhai
+                    </p>
+                    <ul class="collection with-header">
+                        <li class="collection-header"><h4>Students</h4></li>
+                        <li class="collection-item">Alvin</li>
+                        <li class="collection-item">Alvin</li>
+                        <li class="collection-item">Alvin</li>
+                        <li class="collection-item">Alvin</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="src/app/materialize.min.js"></script>
     <script src="src/app/init.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
 </body>
 
 </html>
