--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
          integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
       <link rel="stylesheet" href="src/design/materialize.min.css">
       <link rel="stylesheet" href="src/design/home.css">
+      <link rel="stylesheet" href="src/design/app.css">
    </head>
    <body>
       <header>
