--- a/home.html
+++ b/home.html
@@ -28,8 +28,21 @@
                 <a href="#" class="sidenav-trigger" data-target="mobile-nav">
                     <i class="material-icons grey-text text-darken-3">menu</i>
                 </a>
+                
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <!-- Dropdown Trigger -->
+                    <li>
+                        <a class="dropdown-trigger" href="#" data-target="dropdown2">
+                            <i class="material-icons grey-text text-darken-4">add</i>
+                        </a>
+
+                        <ul id="dropdown2" class="dropdown-content">
+                            <li><a class="grey-text text-darken-4" href="#"><i 
+                                class="material-icons">create</i>Create Class</a></li>
+                            <li><a class="grey-text text-darken-4" href="#"><i 
+                                class="material-icons">filter_vintage</i>Join Class</a></li>
+                        </ul>
+                    </li>
                     <li>
                         <a class='dropdown-trigger' href='#' data-target='dropdown1'><i
                                 class="material-icons grey-text text-darken-1">more_vert</i></a>
