--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                     <!-- Dropdown Trigger -->
                     <li>
                         <a class='dropdown-trigger grey-text text-darken-4' href='#' data-target='dropdown1'>
-                           <i class="material-icons left grey-text text-darken-2">arrow_drop_down</i>Users
+                           <i class="material-icons left grey-text text-darken-2">arrow_drop_down</i>Connect
                         </a>
 
                         <!-- Dropdown Structure -->
                         <ul id='dropdown1' class='dropdown-content'>
-                            <li><a class="grey-text text-darken-3" href="login.html"><i class="material-icons">eco</i>SignIn</a></li>
-                            <li><a class="grey-text text-darken-3" href="registration.html"><i class="material-icons">view_module</i>SignUp</a></li>
+                            <li><a class="grey-text text-darken-3" href="login.html"><i class="material-icons cyan-text text-darken-3">accessibility_new</i>Access</a></li>
+                            <li><a class="grey-text text-darken-3" href="registration.html"><i class="material-icons yellow-text text-darken-3">school</i>Join Classroom</a></li>
                         </ul>
                     </li>
                 </ul>
