--- a/dashboard.html
+++ b/dashboard.html
@@ -64,6 +64,8 @@
                 <a target="_blank" class="title" href="https://github.com/e-Luminous/ui">
                     <i class="fab fa-github"></i> GitHub
                 </a>
+                <a target="_blank" class="title" href="login.html">Login</a>
+                <a target="_blank" class="title" href="registration.html">Login</a>
             </li>
         </ul>
 
