--- a/login.html
+++ b/login.html
@@ -19,37 +19,40 @@
 
 <body>
     <header>
-        <nav class="nav-extended nav-fixed materialize-indigo">
-           <div class="nav-wrapper">
-              <a class="brand-logo" id="page-logo">
-              <i class="material-icons" id="page-logo-icon">brightness_7</i> &nbsp; eLuminous
-              </a>
-              <a href="#" class="sidenav-trigger" data-target="mobile-nav">
-              <i class="material-icons">menu</i>
-              </a>
-              <ul id="nav-mobile" class="right hide-on-med-and-down">
-                   <!-- Dropdown Trigger -->
-                 <li>
-                    <a class='dropdown-trigger' href='#' data-target='dropdown1'><i class="material-icons">more_vert</i></a>
+        <nav class="nav-extended nav-fixed white grey-text text-darken-4">
+            <div class="nav-wrapper">
+                <a class="brand-logo grey-text text-darken-3" id="page-logo">
+                    <i class="material-icons blue-text text-darken-2" id="page-logo-icon">brightness_7</i> &nbsp; eLuminous
+                </a>
+                <a href="#" class="sidenav-trigger" data-target="mobile-nav">
+                <i class="material-icons">menu</i>
+                </a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <!-- Dropdown Trigger -->
+                    <li>
+                    <a class='dropdown-trigger grey-text text-darken-4' href='#' data-target='dropdown1'>
+                        <i class="material-icons left grey-text text-darken-2">arrow_drop_down</i>Connect
+                    </a>
 
                     <!-- Dropdown Structure -->
                     <ul id='dropdown1' class='dropdown-content'>
-                       <li><a class="grey-text text-darken-3" href="login.html"><i class="material-icons">eco</i>SignIn</a></li>
-                      <li><a class="grey-text text-darken-3" href="registration.html"><i class="material-icons">view_module</i>SignUp</a></li>
-                      <li><a class="grey-text text-darken-3" href="classrooms.html"><i class="material-icons">class</i>Classroom</a></li>
+                        <li><a class="grey-text text-darken-3" href="login.html"><i class="material-icons cyan-text text-darken-3">accessibility_new</i>Access</a></li>
+                        <li><a class="grey-text text-darken-3" href="registration.html"><i class="material-icons yellow-text text-darken-3">school</i>Join Classroom</a></li>
                     </ul>
-                 </li>
-              </ul>
-           </div>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <ul class="sidenav yellow-text text-darken-3" id="mobile-nav">
-           <li>
-              <a target="_blank" class="title" href="https://github.com/e-Luminous/ui">
-              <i class="fab fa-github"></i> GitHub
-              </a>
-           </li>
+            <li>
+                <a target="_blank" class="title" href="https://github.com/e-Luminous/ui">
+                <i class="fab fa-github"></i> GitHub
+                </a>
+                <a target="_blank" class="title" href="login.html">Login</a>
+                <a target="_blank" class="title" href="registration.html">Login</a>
+            </li>
         </ul>
-     </header>
+    </header>
 
     <form>
         <div class="container" id="contents">
@@ -72,7 +75,7 @@
                                             </div>
                                         </div>
                                         <div class="step-actions">
-                                            <button class="waves-effect waves-light materialize-indigo btn next-step">next</button>
+                                            <button class="waves-effect waves-light blue darken-2 btn next-step">next</button>
                                         </div>
                                     </div>
                                 </li>
@@ -84,12 +87,12 @@
                                                 <div class="input-field col s12 l12">
                                                     <i class="material-icons prefix">lock</i>
                                                     <input type="password" name="password" class="required validate" />
-                                                    <label for="password">your password</label>
+                                                    <label for="password">Your password</label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="step-actions">
-                                            <button class="waves-effect waves-light materialize-indigo btn next-step">next</button>
+                                            <button class="waves-effect waves-light blue darken-2 btn next-step">next</button>
                                             <button class="waves-effect waves-light btn-flat previous-step">back</button>
                                         </div>
                                     </div>
@@ -98,7 +101,7 @@
                                     <div class="step-title waves-effect eaves-light">Finalize</div>
                                     <div class="step-content">
                                         <div class="step-actions">
-                                            <a href="classrooms.html" class="waves-effect waves-light materialize-indigo btn submit">login</a>
+                                            <a href="dashboard.html" class="waves-effect waves-light blue darken-2 btn submit">login</a>
                                             <button class="waves-effect waves-light btn-flat previous-step">back</button>
                                         </div>
                                     </div>
