added Mobile References

--- a/registration.html
+++ b/registration.html
@@ -48,7 +48,7 @@
               <i class="fab fa-github"></i> GitHub
               </a>
               <a target="_blank" class="title" href="login.html">Login</a>
-                <a target="_blank" class="title" href="registration.html">Login</a>
+              <a target="_blank" class="title" href="registration.html">Registration</a>
            </li>
         </ul>
      </header>
