--- a/dashboard.html
+++ b/dashboard.html
@@ -65,7 +65,7 @@
                     <i class="fab fa-github"></i> GitHub
                 </a>
                 <a target="_blank" class="title" href="login.html">Login</a>
-                <a target="_blank" class="title" href="registration.html">Login</a>
+                <a target="_blank" class="title" href="registration.html">Registration</a>
             </li>
         </ul>
 
