--- a/classrooms.html
+++ b/classrooms.html
@@ -44,6 +44,8 @@
                     <i class="fab fa-github"></i> GitHub
                 </a>
             </li>
+            <li><a target="_blank" class="title" href="login.html">Login</a></li>
+            <li><a target="_blank" class="title" href="registration.html">Registration</a></li>
         </ul>
     </header>
     <div id="load" class="progress yellow darken-1">
