--- a/dashboard.html
+++ b/dashboard.html
@@ -30,16 +30,25 @@
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <!-- Dropdown Trigger -->
                     <li>
-                        <a class="dropdown-trigger" href="#" data-target="dropdown2">
+                        <a class="modal-trigger" href="#modal1">
                             <i class="material-icons grey-text text-darken-4">add</i>
                         </a>
 
-                        <ul id="dropdown2" class="dropdown-content">
-                            <li><a class="grey-text text-darken-4" href="#"><i 
-                                class="material-icons">create</i>Create Class</a></li>
-                            <li><a class="grey-text text-darken-4" href="#"><i 
-                                class="material-icons">filter_vintage</i>Join Class</a></li>
-                        </ul>
+                        <div id="modal1" class="modal">
+                            <div class="modal-content s6">
+                                <div class="row">
+                                    <form class="col s12">
+                                        <div class="row">
+                                            <div class="input-field col s6">
+                                                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                                                <label for="first_name">Access Code</label>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <a class="btn">Submit</a>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <a class='dropdown-trigger' href='#' data-target='dropdown1'><i
