--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                     <i class="fab fa-github"></i> GitHub
                 </a>
             </li>
+            <li><a target="_blank" class="title" href="login.html">Login</a></li>
+            <li><a target="_blank" class="title" href="registration.html">Registration</a></li>
         </ul>
     </header>
 
