--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                     <i class="material-icons blue-text text-darken-2" id="page-logo-icon">brightness_7</i> &nbsp; eLuminous
                 </a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-nav">
-                <i class="material-icons">menu</i>
+                <i class="material-icons grey-text text-darken-4">menu</i>
                 </a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <!-- Dropdown Trigger -->
